bug fix: wolf image overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@
     width: 100%;
     height: 100%;
     outline: 2px solid black;
+    overflow: hidden;
  }
 
 @media(min-width: 768px){
